--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,7 +5,6 @@
     <title>Todo List</title>
   </head>
   <body>
-    <h1> It's <%= kindOfDay  =%></h1>
-
+    <h1> Its <%= kindOfDay %> </h1>
   </body>
 </html>
