--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,5 +6,21 @@
   </head>
   <body>
     <h1> Its <%= kindOfDay %> </h1>
+
+<form class="" action="/" method="post">
+  <ul>
+    <li>Buy Food</li>
+    <li>cook Food</li>
+    <li>Eat food</li>
+    <li><%= newListItem %></li>
+
+    <% for (let i in newListItem) { %>
+      <li><%= newListItem[i] %></li>
+    <% } %>
+
+  </ul>
+  <input type="text" name="newitem">
+  <button type="submit" name="button">Add</button>
+</form>
   </body>
 </html>
