--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,10 +9,10 @@
 
 <form class="" action="/" method="post">
   <ul>
-    <li>Buy Food</li>
+    <!-- <li>Buy Food</li>
     <li>cook Food</li>
     <li>Eat food</li>
-    <li><%= newListItem %></li>
+    <li><%= newListItem %></li> -->
 
     <% for (let i in newListItem) { %>
       <li><%= newListItem[i] %></li>
