--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Todo List</title>
+    <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
     <h1> Its <%= kindOfDay %> </h1>
